<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">aNokiCert</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="bluetooth_not_supported">Bluetooth not supported</string>
	<string name="bluetooth_not_supported_message">It seems that your device doesn\'t support bluetooth.</string>
	<string name="select_device">Select device</string>
	<string name="please_wait">Please wait.</string>
	<string name="no_device_selected">No device selected</string>
	<string name="getting_device_info">Getting device info</string>
	<string name="device_info">Device info</string>
	<string name="phone_model">Device model</string>
	<string name="firmware_version">Firmware version</string>
	<string name="firmware_date">Firmware date</string>
	<string name="certificate">Certificate</string>
	<string name="list_certificates">List sertificates</string>
	<string name="choose_certificate">Choose certificate</string>
	<string name="paired_devices">Paired devices</string>
	<string name="available_devices">Available devices</string>
	<string name="search_again">Search again</string>
	<string name="device_busy">Device busy</string>
	<string name="device_busy_message">Device is busy, please wait while device connecting.</string>
	<string name="close">Close</string>
	<string name="certificates_list">Certificates list</string>
	<string name="select_file">Select file</string>
	<string name="key_usage">Key usage</string>
	<string name="applications_signing">Applications signing</string>
	<string name="cross_certification">Cross certification</string>
	<string name="server_authentication">Server authentication</string>
	<string name="install">Install</string>
	<string name="cert_info">Cert info</string>
	<string name="error">Error</string>
	<string name="successfully_installed">Successfully installed</string>
	<string name="successfully_installed_message">Certificate successfully installed to your phone.</string>
	<string name="unable_to_list_certificates">Unable to list certificates</string>
	<string name="phone_unsupported">Phone unsupported.</string>
	<string name="phone_unsupported_message">Your phone is not supported.</string>
	<string name="connection_problem_message">Unable to connect to your phone.</string>
	<string name="bluetooth_is_off">Bluetooth is off</string>
	<string name="invalid_cert_message">The certificate file you provided is invalid.</string>

</resources>