<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.MainActivity">

	<TextView
		android:id="@+id/no_device_selected"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:text="@string/no_device_selected"
		android:textAppearance="?android:textAppearanceMedium"
		android:visibility="gone"/>

	<ScrollView
		android:id="@+id/content_scroller"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<org.mariotaku.anokicert.view.MainLinearLayout
			android:id="@+id/content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:splitMotionEvents="false">

			<TextView
				style="?android:attr/listSeparatorTextViewStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/device_info"/>

			<TableLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/default_element_spacing"
				android:background="?android:selectableItemBackground"
				android:clickable="true"
				android:minHeight="?android:listPreferredItemHeight"
				android:padding="@dimen/default_element_spacing">

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingRight="@dimen/default_element_spacing"
						android:text="@string/phone_model"
						android:textColor="?android:textColorPrimary"/>

					<TextView
						android:id="@+id/phone_model"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:textColor="?android:textColorPrimary"/>
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingRight="@dimen/default_element_spacing"
						android:text="@string/firmware_version"
						android:textColor="?android:textColorPrimary"/>

					<TextView
						android:id="@+id/firmware_version"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:textColor="?android:textColorPrimary"/>
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingRight="@dimen/default_element_spacing"
						android:text="@string/firmware_date"
						android:textColor="?android:textColorPrimary"/>

					<TextView
						android:id="@+id/firmware_date"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:textColor="?android:textColorPrimary"/>
				</TableRow>
			</TableLayout>

			<TextView
				style="?android:attr/listSeparatorTextViewStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/certificate"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/default_element_spacing"
				android:orientation="vertical">

				<Button
					android:id="@+id/list_certificates"
					style="?android:borderlessButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:minHeight="?android:listPreferredItemHeight"
					android:onClick="onClick"
					android:padding="@dimen/default_element_spacing"
					android:text="@string/list_certificates"
					android:textAppearance="?android:textAppearanceMedium"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="0.1dp"
					android:background="#40808080"/>

				<Button
					android:id="@+id/choose_certificate"
					style="?android:borderlessButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:minHeight="?android:listPreferredItemHeight"
					android:onClick="onClick"
					android:padding="@dimen/default_element_spacing"
					android:text="@string/choose_certificate"
					android:textAppearance="?android:textAppearanceMedium"/>

				<LinearLayout
					android:id="@+id/install_certificate_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="gone">

					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:background="#40808080"/>

					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/default_element_spacing">

						<TextView
							android:id="@+id/key_usage"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignParentTop="true"
							android:text="@string/key_usage"
							android:textAppearance="?android:textAppearanceMedium"/>

						<CheckBox
							android:id="@+id/applications_signing"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_below="@+id/key_usage"
							android:layout_marginLeft="@dimen/default_element_spacing"
							android:layout_marginTop="@dimen/default_element_spacing"
							android:checked="true"
							android:singleLine="true"
							android:text="@string/applications_signing"/>

						<CheckBox
							android:id="@+id/cross_certification"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignLeft="@+id/applications_signing"
							android:layout_below="@+id/applications_signing"
							android:singleLine="true"
							android:text="@string/cross_certification"/>

						<CheckBox
							android:id="@+id/server_authentication"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_alignLeft="@+id/applications_signing"
							android:layout_below="@+id/cross_certification"
							android:singleLine="true"
							android:text="@string/server_authentication"/>
					</RelativeLayout>

					<View
						android:layout_width="match_parent"
						android:layout_height="0.1dp"
						android:background="#40808080"/>

					<TableRow
						android:layout_width="match_parent"
						android:layout_height="48dp">

						<Button
							android:id="@+id/perform_installation"
							style="?android:borderlessButtonStyle"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:onClick="onClick"
							android:text="@string/install"
							android:textColor="?android:textColorPrimary"/>

						<View
							android:layout_width="0.1dp"
							android:layout_height="match_parent"
							android:layout_weight="0"
							android:background="#40808080"/>

						<Button
							android:id="@+id/view_info"
							style="?android:borderlessButtonStyle"
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:onClick="onClick"
							android:text="@string/cert_info"
							android:textColor="?android:textColorPrimary"/>
					</TableRow>
				</LinearLayout>
			</LinearLayout>
		</org.mariotaku.anokicert.view.MainLinearLayout>
	</ScrollView>

</FrameLayout>